CSS/index_styles.css
/* ... */
#resume.hidden-well {
    display: none;
}

#resume {
    font-size: 35px;
    color: var(--emphasis);
    display: flex;
    align-items: flex-end;
    overflow: hidden;
    height: auto;
    position: fixed;
    top: 14vh;
    right: 5vw;
    animation-name: fade-in;
    animation-duration: 1s;
    animation-delay: 2s;
    animation-fill-mode: both;
}

#resume-download {
    display: flex;
    text-decoration: none;
}

#pdf-icon {
    width: 30px;
    height: 37px;
    margin: 0 8px 6px 30px;
}

#pdf-desc {
    color: white;
    margin: 10px 0 0 0;
    font-size: 25px;
}

.img-text-row {
    position: relative;
    display: grid;
    grid-template-columns: 10% 90%;
    color: var(--default-text);
    font-size: 25px;
    padding-top: 5vh;
    padding-right: 0.5vw;
}

#second-header-body .img-text-row img {
    height: 65px;
}

#second-header-body {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    overflow-y: auto;
    height: calc(70vh - 10px);
    height: calc(70svh - 10px);
    margin-bottom: 2rem;
    animation-name: fade-in-translate;
    animation-duration: 1s;
    animation-delay: 1s;
    animation-fill-mode: both;
    padding-left: 1rem;
    padding-bottom: 2rem;
    margin-left: -1rem;
}

.card {
    width: 330px;
    height: 550px;
    position: relative;
    display: grid;
    grid-template-rows: 1fr 1fr;
    border-radius: 12px;
    transition: box-shadow 0.4s ease-out, transform 0.4s ease-out,
        border 0.4s ease-out;
    margin-top: 1rem;
}

@media screen and (max-width: 500px) {
    .card {
        width: 330px;
        height: 430px;
    }
    .card:last-child {
        margin-bottom: 2rem;
    }
}

@media (hover: hover) {
    .card:hover .card-body {
        border: 4px solid var(--emphasis);
    }
    .card:hover {
        box-shadow: 0 0 10px 0 var(--emphasis);
        transform: scale(1.01);
    }
    #third-header-body .card:hover {
        border: 4px solid var(--emphasis);
    }
}

.card .top-image-back {
    border-radius: 12px 12px 0 0;
}

.card .top-image.expand {
    height: 100%;
    border-radius: 12px;
    z-index: 1;
}

.card .top-image {
    position: absolute;
    height: 50%;
    width: 100%;
    object-fit: cover;
    border-radius: 12px 12px 0 0;
    transition: height 0.4s ease-out, border-radius 0.4s ease-out;
    cursor: pointer;
}

#third-header-body .card {
    border: 4px solid var(--heading-1);
    height: 480px;
    width: 345px;
    grid-template-rows: 1fr 1.1fr;
}

#third-header-body .card .top-image-well {
    display: flex;
    justify-content: center;
    align-items: center;
}
#third-header-body .card .top-image {
    object-fit: cover;
    position: relative;
    height: auto;
    max-width: 140px;
    border-radius: 0px;
}

@media screen and (max-width: 500px) {
    #third-header-body .card .top-image {
        max-width: 130px;
    }

    #third-header-body .card {
        height: 440px;
    }
}

#third-header-body .top-image-back,
#third-header-body .bottom-logo {
    display: none;
}

.card-body {
    padding: 1rem;
    padding-bottom: 0;
    border: 4px solid var(--heading-1);
    border-radius: 0 0 12px 12px;
    transition: color 0.4s ease-out, border 0.4s ease-out;
}

.gold {
    color: var(--gold);
}

.card-body p:last-of-type {
    margin-bottom: 0;
}

.card a {
    color: var(--blue);
    text-decoration: none;
}

#third-header-body .card-body {
    border: none;
    padding-top: 0;
}

.divider {
    border-top: 1px solid var(--default-text);
    margin-bottom: 0.5rem;
}

.card-body p.subtitle {
    margin-top: 0.25rem;
}

.card-body i {
    font-family: SignikaNegativeBold, sans-serif;
    margin-top: 1rem;
    font-weight: bold;
    color: var(--emphasis);
}

.card-body p:not(.subtitle) {
    font-size: 19px;
    margin: 0.75rem 0;
}

.card .bottom-logo {
    height: 40px;
    width: auto;
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 0 1rem 1rem 0;
}

#third-header-body .creature-well {
    position: relative;
}

#third-header-body .creature-well img.top-image {
    position: absolute;
    top: 0;
    left: 0;
}

#third-header-body img#idle-back.top-image {
    height: 274px;
    width: 158px;
    max-width: none;
    transform: translate(80px, -15px);
    z-index: -1;
}

#third-header-body img#idle-front.top-image {
    height: 18px;
    width: 22px;
    max-width: none;
    transform: translate(111px, -14px);
    z-index: 1;
}

@media screen and (min-width: 440px) {
    #martha-rave-header {
        transform: translateY(0.25rem);
        font-size: 28px;
    }
}

#bottom-guitar-logo {
    height: 60px;
}

#bottom-hockey-logo {
    height: 50px;
}

#bottom-frisbee-logo {
    height: 40px;
}

@media screen and (max-width: 500px) {
    .card-body p {
        font-size: 15px;
    }
    .card-body p:not(.subtitle) {
        font-size: 16px;
        margin: 0.5rem 0;
    }
    .card .bottom-logo {
        height: 30px;
    }
    #bottom-guitar-logo {
        height: 50px;
    }
    #bottom-hockey-logo {
        height: 50px;
    }

    #bottom-frisbee-logo {
        height: 40px;
    }
}

#first-header-code-img {
    width: 100px;
    height: 80px;
}

.img-text-row img {
    width: auto;
    height: 100px;
    padding-right: 1vw;
}

.img-text-row ul {
    margin: 0 0 25px 0;
}

.img-text-row p,
.img-text-row img {
    margin-top: 0;
    margin-bottom: 4vh;
}

.img-text-row img#tdsb-logo {
    height: 2.5vw;
    min-height: 35px;
    width: auto;
    padding-right: 1.4vw;
}

.img-text-row img#guitar-logo {
    height: 120px;
    width: auto;
    padding-left: 1.2vw;
}

.img-text-row img#hockey-logo {
    height: 90px;
    width: auto;
    padding-left: 0.5vw;
}

.img-text-row img#frisbee-logo {
    height: 75px;
}

.row-title {
    position: absolute;
    top: 0;
    margin: 0;
    padding-left: 10%;
}

.row-img {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
}
/* ... */

